[package]
name = "qnn-bindings-rs"
version = "0.2.0"
edition = "2021"
authors = ["GRZECZKA MAXIMILIEN"]
description = "Rust bindings and CLI runner for Qualcomm Genie/QNN on Snapdragon X Plus 8 Cores."
license = "MIT"
readme = "README.md"
keywords = ["snapdragon", "qnn", "genie", "llm", "npu"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
bindgen = "0.69"

[profile.release]
opt-level = 3
